--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,20 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <% if (messages) { %> 
+    <% messages.forEach(message => { %>
+
+    <h3><%= message.user %></h3>
+    <p><%= message.text %> </p>
+    <p><%= message.added %> </p>
+    <% }) %>
+    <% } else { %>
+      <p>No messages in the board</p>
+    <% } %>
   </body>
 </html>
