--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  font: 14px "Noto Sans", Helvetica, Arial, sans-serif;
+  background-color: #293241;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  background-color: #3d5a80;
+  color: white;
+  padding: 2rem;
+  margin-bottom: 2rem;
+  width: 100%;
+  text-align: center;
+}
+
+.messages-container {
+  padding: 2rem;
+  min-width: 900px;
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  padding: 1rem;
+  background-color: #131c2c;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  border-radius: 3px;
+}
+.author::before {
+  content: '> ';
+  color: #ee6c4d;
+}
+.time {
+  align-self: flex-end;
 }
 
 a {
-  color: #00B7FF;
+  background-color: #EE6C4D;
+  padding: 1rem;
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+a:hover{
+  background-color: #914631;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 650px;
+  padding: 1rem;
+  margin-bottom: 3rem;
+}
+
+.input {
+  padding: 1rem;
+  outline: none;
+  font-size: 14px;
+  font-family: "Noto Sans";
+  width: 100%;
+}
+
+button{
+  background-color: #45803d;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 1rem;
+  width: 50%;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+button:hover{
+  background-color: #3e7437
+}
+
+textarea{
+  resize: vertical
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+input, textarea {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
