--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,17 +5,19 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <% if (messages) { %> 
-    <% messages.forEach(message => { %>
-
-    <h3><%= message.user %></h3>
-    <p><%= message.text %> </p>
-    <p><%= message.added %> </p>
-    <% }) %>
-    <% } else { %>
+    <h1 class="title"><%= title %></h1>
+    <div class="messages-container">
+      <% if (messages) { %> <% messages.forEach(message => { %>
+      <div class="message">
+        <h3 class="author"><%= message.user %></h3>
+        <p><%= message.text %></p>
+        <p class="time"><%= message.added %></p>
+      </div>
+      <% }) %> <% } else { %>
       <p>No messages in the board</p>
-    <% } %>
+      <% } %>
+    </div>
+
+    <a href="/new">Add a new message</a>
   </body>
 </html>
